PR kern/55674: 	move name space availability check from ld_nvme.c:ld_nvme_attach() 	to nvme.c:nvme_rescan(). 	this avoids allocation of ld(4) instances for every possible 	name space, even if it is not usable. it also reduces the device 	node flood generated from that strategy.